# dist-ml-pipeline

./: .gitignore  README.md  docker-compose.yml  mnist.py  mnist_model.pt  pyproject.toml  sample.py  serve.py
app/: Dockerfile  pyproject.toml  serve.py
app_examples/: sample.py
cronjob/: Dockerfile  ptjob_sdk.py
k8s/: app.yaml  configmap-fd.yaml  cronjob.yaml  daemon-set.yaml  kind_config.yaml  training.yaml
models/: model1.py
training/: Dockerfile  mnist.py  pyproject.toml
