[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rohan Gupta <rohangupta883@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
torch = "^1.10.0"
torchvision = "^0.11.1"
uvicorn = "^0.15.0"
Pillow = "^8.4.0"
python-multipart = "^0.0.5"
boto3 = "^1.20.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
