[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Rohan Gupta <rohangupta883@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
torchvision = "^0.11.1"
black = "^21.11b1"
boto3 = "^1.20.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
